fixed wrong width of log out options

--- a/src/style/user-state.scss
+++ b/src/style/user-state.scss
@@ -64,7 +64,8 @@ $tableBg: #1ABEB9;
   }
   .options{
     z-index: 1001;
-    width: 300px;
+    width: 30vw;
+    max-width: 300px;
     position: absolute;
     bottom: 0;
     right: 0;
